# spngt

./: .gitignore  LICENSE  README.md  cross_arm.txt  lodepng.c  lodepng.h  main.lua  meson.build  meson_options.txt  png_bench.c  rpi400.txt  spngt.c  spngt.h  spngt.lua  spngt_bench.h  spngt_dummy.c  spngt_libpng.c  spngt_lodepng.c  spngt_lua.c  spngt_spng.c  spngt_stb.c  spngt_wuffs.c  test_png.h  test_spng.h  test_wuffs.h  timings.md
results/: README.md  kodak.csv  kodak_params.csv  mixed.csv  mixed_params.csv  rpi400-enc.txt  tango.csv  tango_params.csv  x86-enc.txt
subprojects/: benchmark_images.wrap  kodakimages.wrap  libpng.wrap  lodepng.wrap  lua.wrap  miniz.wrap  qoi.wrap  spng.wrap  stb.wrap  tango_icons.wrap  wuffs.wrap  zlib-ng.wrap  zlib.wrap
subprojects/packagefiles/kodakimages/: meson.build
subprojects/packagefiles/lodepng/: meson.build
subprojects/packagefiles/lua/: meson.build
subprojects/packagefiles/qoi/: meson.build
subprojects/packagefiles/stb/: meson.build
subprojects/packagefiles/tango_icons/: meson.build
subprojects/packagefiles/wuffs/: meson.build
