project('tango_icons')

png64_icons = files(
    'png-64/actions-address-book-new.png',
    'png-64/actions-appointment-new.png',
    'png-64/actions-bookmark-new.png',
    'png-64/actions-contact-new.png',
    'png-64/actions-document-new.png',
    'png-64/actions-document-open.png',
    'png-64/actions-document-print.png',
    'png-64/actions-document-print-preview.png',
    'png-64/actions-document-properties.png',
    'png-64/actions-document-save-as.png',
    'png-64/actions-document-save.png',
    'png-64/actions-edit-clear.png',
    'png-64/actions-edit-copy.png',
    'png-64/actions-edit-cut.png',
    'png-64/actions-edit-delete.png',
    'png-64/actions-edit-find.png',
    'png-64/actions-edit-find-replace.png',
    'png-64/actions-edit-paste.png',
    'png-64/actions-edit-redo.png',
    'png-64/actions-edit-select-all.png',
    'png-64/actions-edit-undo.png',
    'png-64/actions-folder-new.png',
    'png-64/actions-format-indent-less.png',
    'png-64/actions-format-indent-more.png',
    'png-64/actions-format-justify-center.png',
    'png-64/actions-format-justify-fill.png',
    'png-64/actions-format-justify-left.png',
    'png-64/actions-format-justify-right.png',
    'png-64/actions-format-text-bold.png',
    'png-64/actions-format-text-italic.png',
    'png-64/actions-format-text-strikethrough.png',
    'png-64/actions-format-text-underline.png',
    'png-64/actions-go-bottom.png',
    'png-64/actions-go-down.png',
    'png-64/actions-go-first.png',
    'png-64/actions-go-home.png',
    'png-64/actions-go-jump.png',
    'png-64/actions-go-last.png',
    'png-64/actions-go-next.png',
    'png-64/actions-go-previous.png',
    'png-64/actions-go-top.png',
    'png-64/actions-go-up.png',
    'png-64/actions-list-add.png',
    'png-64/actions-list-remove.png',
    'png-64/actions-mail-forward.png',
    'png-64/actions-mail-mark-junk.png',
    'png-64/actions-mail-message-new.png',
    'png-64/actions-mail-reply-all.png',
    'png-64/actions-mail-reply-sender.png',
    'png-64/actions-mail-send-receive.png',
    'png-64/actions-media-eject.png',
    'png-64/actions-media-playback-pause.png',
    'png-64/actions-media-playback-start.png',
    'png-64/actions-media-playback-stop.png',
    'png-64/actions-media-record.png',
    'png-64/actions-media-seek-backward.png',
    'png-64/actions-media-seek-forward.png',
    'png-64/actions-media-skip-backward.png',
    'png-64/actions-media-skip-forward.png',
    'png-64/actions-process-stop.png',
    'png-64/actions-system-lock-screen.png',
    'png-64/actions-system-log-out.png',
    'png-64/actions-system-search.png',
    'png-64/actions-system-shutdown.png',
    'png-64/actions-tab-new.png',
    'png-64/actions-view-fullscreen.png',
    'png-64/actions-view-refresh.png',
    'png-64/actions-window-new.png',
    'png-64/apps-accessories-calculator.png',
    'png-64/apps-accessories-character-map.png',
    'png-64/apps-accessories-text-editor.png',
    'png-64/apps-help-browser.png',
    'png-64/apps-internet-group-chat.png',
    'png-64/apps-internet-mail.png',
    'png-64/apps-internet-news-reader.png',
    'png-64/apps-internet-web-browser.png',
    'png-64/apps-office-calendar.png',
    'png-64/apps-preferences-desktop-accessibility.png',
    'png-64/apps-preferences-desktop-assistive-technology.png',
    'png-64/apps-preferences-desktop-font.png',
    'png-64/apps-preferences-desktop-keyboard-shortcuts.png',
    'png-64/apps-preferences-desktop-locale.png',
    'png-64/apps-preferences-desktop-multimedia.png',
    'png-64/apps-preferences-desktop-remote-desktop.png',
    'png-64/apps-preferences-desktop-screensaver.png',
    'png-64/apps-preferences-desktop-theme.png',
    'png-64/apps-preferences-desktop-wallpaper.png',
    'png-64/apps-preferences-system-network-proxy.png',
    'png-64/apps-preferences-system-session.png',
    'png-64/apps-preferences-system-windows.png',
    'png-64/apps-system-file-manager.png',
    'png-64/apps-system-installer.png',
    'png-64/apps-system-software-update.png',
    'png-64/apps-system-users.png',
    'png-64/apps-utilities-system-monitor.png',
    'png-64/apps-utilities-terminal.png',
    'png-64/categories-applications-accessories.png',
    'png-64/categories-applications-development.png',
    'png-64/categories-applications-games.png',
    'png-64/categories-applications-graphics.png',
    'png-64/categories-applications-internet.png',
    'png-64/categories-applications-multimedia.png',
    'png-64/categories-applications-office.png',
    'png-64/categories-applications-other.png',
    'png-64/categories-applications-system.png',
    'png-64/categories-preferences-desktop-peripherals.png',
    'png-64/categories-preferences-desktop.png',
    'png-64/categories-preferences-system.png',
    'png-64/devices-audio-card.png',
    'png-64/devices-audio-input-microphone.png',
    'png-64/devices-battery.png',
    'png-64/devices-camera-photo.png',
    'png-64/devices-camera-video.png',
    'png-64/devices-computer.png',
    'png-64/devices-drive-harddisk.png',
    'png-64/devices-drive-optical.png',
    'png-64/devices-drive-removable-media.png',
    'png-64/devices-input-gaming.png',
    'png-64/devices-input-keyboard.png',
    'png-64/devices-input-mouse.png',
    'png-64/devices-media-flash.png',
    'png-64/devices-media-floppy.png',
    'png-64/devices-media-optical.png',
    'png-64/devices-multimedia-player.png',
    'png-64/devices-network-wired.png',
    'png-64/devices-network-wireless.png',
    'png-64/devices-printer.png',
    'png-64/devices-video-display.png',
    'png-64/emblems-emblem-favorite.png',
    'png-64/emblems-emblem-important.png',
    'png-64/emblems-emblem-photos.png',
    'png-64/emblems-emblem-readonly.png',
    'png-64/emblems-emblem-symbolic-link.png',
    'png-64/emblems-emblem-system.png',
    'png-64/emblems-emblem-unreadable.png',
    'png-64/emotes-face-angel.png',
    'png-64/emotes-face-crying.png',
    'png-64/emotes-face-devilish.png',
    'png-64/emotes-face-glasses.png',
    'png-64/emotes-face-grin.png',
    'png-64/emotes-face-kiss.png',
    'png-64/emotes-face-monkey.png',
    'png-64/emotes-face-plain.png',
    'png-64/emotes-face-sad.png',
    'png-64/emotes-face-smile-big.png',
    'png-64/emotes-face-smile.png',
    'png-64/emotes-face-surprise.png',
    'png-64/emotes-face-wink.png',
    'png-64/mimetypes-application-certificate.png',
    'png-64/mimetypes-application-x-executable.png',
    'png-64/mimetypes-audio-x-generic.png',
    'png-64/mimetypes-font-x-generic.png',
    'png-64/mimetypes-image-x-generic.png',
    'png-64/mimetypes-package-x-generic.png',
    'png-64/mimetypes-text-html.png',
    'png-64/mimetypes-text-x-generic.png',
    'png-64/mimetypes-text-x-generic-template.png',
    'png-64/mimetypes-text-x-script.png',
    'png-64/mimetypes-video-x-generic.png',
    'png-64/mimetypes-x-office-address-book.png',
    'png-64/mimetypes-x-office-calendar.png',
    'png-64/mimetypes-x-office-document.png',
    'png-64/mimetypes-x-office-document-template.png',
    'png-64/mimetypes-x-office-drawing.png',
    'png-64/mimetypes-x-office-drawing-template.png',
    'png-64/mimetypes-x-office-presentation.png',
    'png-64/mimetypes-x-office-presentation-template.png',
    'png-64/mimetypes-x-office-spreadsheet.png',
    'png-64/mimetypes-x-office-spreadsheet-template.png',
    'png-64/places-folder.png',
    'png-64/places-folder-remote.png',
    'png-64/places-folder-saved-search.png',
    'png-64/places-network-server.png',
    'png-64/places-network-workgroup.png',
    'png-64/places-start-here.png',
    'png-64/places-user-desktop.png',
    'png-64/places-user-home.png',
    'png-64/places-user-trash.png',
    'png-64/status-audio-volume-high.png',
    'png-64/status-audio-volume-low.png',
    'png-64/status-audio-volume-medium.png',
    'png-64/status-audio-volume-muted.png',
    'png-64/status-battery-caution.png',
    'png-64/status-dialog-error.png',
    'png-64/status-dialog-information.png',
    'png-64/status-dialog-warning.png',
    'png-64/status-folder-drag-accept.png',
    'png-64/status-folder-open.png',
    'png-64/status-folder-visiting.png',
    'png-64/status-image-loading.png',
    'png-64/status-image-missing.png',
    'png-64/status-mail-attachment.png',
    'png-64/status-network-error.png',
    'png-64/status-network-idle.png',
    'png-64/status-network-offline.png',
    'png-64/status-network-receive.png',
    'png-64/status-network-transmit.png',
    'png-64/status-network-transmit-receive.png',
    'png-64/status-network-wireless-encrypted.png',
    'png-64/status-printer-error.png',
    'png-64/status-software-update-available.png',
    'png-64/status-software-update-urgent.png',
    'png-64/status-user-trash-full.png',
    'png-64/status-weather-clear-night.png',
    'png-64/status-weather-clear.png',
    'png-64/status-weather-few-clouds-night.png',
    'png-64/status-weather-few-clouds.png',
    'png-64/status-weather-overcast.png',
    'png-64/status-weather-severe-alert.png',
    'png-64/status-weather-showers.png',
    'png-64/status-weather-showers-scattered.png',
    'png-64/status-weather-snow.png',
    'png-64/status-weather-storm.png'
)

png512_icons = files(
    'png-512/actions-address-book-new.png',
    'png-512/actions-appointment-new.png',
    'png-512/actions-bookmark-new.png',
    'png-512/actions-contact-new.png',
    'png-512/actions-document-new.png',
    'png-512/actions-document-open.png',
    'png-512/actions-document-print.png',
    'png-512/actions-document-print-preview.png',
    'png-512/actions-document-properties.png',
    'png-512/actions-document-save-as.png',
    'png-512/actions-document-save.png',
    'png-512/actions-edit-clear.png',
    'png-512/actions-edit-copy.png',
    'png-512/actions-edit-cut.png',
    'png-512/actions-edit-delete.png',
    'png-512/actions-edit-find.png',
    'png-512/actions-edit-find-replace.png',
    'png-512/actions-edit-paste.png',
    'png-512/actions-edit-redo.png',
    'png-512/actions-edit-select-all.png',
    'png-512/actions-edit-undo.png',
    'png-512/actions-folder-new.png',
    'png-512/actions-format-indent-less.png',
    'png-512/actions-format-indent-more.png',
    'png-512/actions-format-justify-center.png',
    'png-512/actions-format-justify-fill.png',
    'png-512/actions-format-justify-left.png',
    'png-512/actions-format-justify-right.png',
    'png-512/actions-format-text-bold.png',
    'png-512/actions-format-text-italic.png',
    'png-512/actions-format-text-strikethrough.png',
    'png-512/actions-format-text-underline.png',
    'png-512/actions-go-bottom.png',
    'png-512/actions-go-down.png',
    'png-512/actions-go-first.png',
    'png-512/actions-go-home.png',
    'png-512/actions-go-jump.png',
    'png-512/actions-go-last.png',
    'png-512/actions-go-next.png',
    'png-512/actions-go-previous.png',
    'png-512/actions-go-top.png',
    'png-512/actions-go-up.png',
    'png-512/actions-list-add.png',
    'png-512/actions-list-remove.png',
    'png-512/actions-mail-forward.png',
    'png-512/actions-mail-mark-junk.png',
    'png-512/actions-mail-message-new.png',
    'png-512/actions-mail-reply-all.png',
    'png-512/actions-mail-reply-sender.png',
    'png-512/actions-mail-send-receive.png',
    'png-512/actions-media-eject.png',
    'png-512/actions-media-playback-pause.png',
    'png-512/actions-media-playback-start.png',
    'png-512/actions-media-playback-stop.png',
    'png-512/actions-media-record.png',
    'png-512/actions-media-seek-backward.png',
    'png-512/actions-media-seek-forward.png',
    'png-512/actions-media-skip-backward.png',
    'png-512/actions-media-skip-forward.png',
    'png-512/actions-process-stop.png',
    'png-512/actions-system-lock-screen.png',
    'png-512/actions-system-log-out.png',
    'png-512/actions-system-search.png',
    'png-512/actions-system-shutdown.png',
    'png-512/actions-tab-new.png',
    'png-512/actions-view-fullscreen.png',
    'png-512/actions-view-refresh.png',
    'png-512/actions-window-new.png',
    'png-512/apps-accessories-calculator.png',
    'png-512/apps-accessories-character-map.png',
    'png-512/apps-accessories-text-editor.png',
    'png-512/apps-help-browser.png',
    'png-512/apps-internet-group-chat.png',
    'png-512/apps-internet-mail.png',
    'png-512/apps-internet-news-reader.png',
    'png-512/apps-internet-web-browser.png',
    'png-512/apps-office-calendar.png',
    'png-512/apps-preferences-desktop-accessibility.png',
    'png-512/apps-preferences-desktop-assistive-technology.png',
    'png-512/apps-preferences-desktop-font.png',
    'png-512/apps-preferences-desktop-keyboard-shortcuts.png',
    'png-512/apps-preferences-desktop-locale.png',
    'png-512/apps-preferences-desktop-multimedia.png',
    'png-512/apps-preferences-desktop-remote-desktop.png',
    'png-512/apps-preferences-desktop-screensaver.png',
    'png-512/apps-preferences-desktop-theme.png',
    'png-512/apps-preferences-desktop-wallpaper.png',
    'png-512/apps-preferences-system-network-proxy.png',
    'png-512/apps-preferences-system-session.png',
    'png-512/apps-preferences-system-windows.png',
    'png-512/apps-system-file-manager.png',
    'png-512/apps-system-installer.png',
    'png-512/apps-system-software-update.png',
    'png-512/apps-system-users.png',
    'png-512/apps-utilities-system-monitor.png',
    'png-512/apps-utilities-terminal.png',
    'png-512/categories-applications-accessories.png',
    'png-512/categories-applications-development.png',
    'png-512/categories-applications-games.png',
    'png-512/categories-applications-graphics.png',
    'png-512/categories-applications-internet.png',
    'png-512/categories-applications-multimedia.png',
    'png-512/categories-applications-office.png',
    'png-512/categories-applications-other.png',
    'png-512/categories-applications-system.png',
    'png-512/categories-preferences-desktop-peripherals.png',
    'png-512/categories-preferences-desktop.png',
    'png-512/categories-preferences-system.png',
    'png-512/devices-audio-card.png',
    'png-512/devices-audio-input-microphone.png',
    'png-512/devices-battery.png',
    'png-512/devices-camera-photo.png',
    'png-512/devices-camera-video.png',
    'png-512/devices-computer.png',
    'png-512/devices-drive-harddisk.png',
    'png-512/devices-drive-optical.png',
    'png-512/devices-drive-removable-media.png',
    'png-512/devices-input-gaming.png',
    'png-512/devices-input-keyboard.png',
    'png-512/devices-input-mouse.png',
    'png-512/devices-media-flash.png',
    'png-512/devices-media-floppy.png',
    'png-512/devices-media-optical.png',
    'png-512/devices-multimedia-player.png',
    'png-512/devices-network-wired.png',
    'png-512/devices-network-wireless.png',
    'png-512/devices-printer.png',
    'png-512/devices-video-display.png',
    'png-512/emblems-emblem-favorite.png',
    'png-512/emblems-emblem-important.png',
    'png-512/emblems-emblem-photos.png',
    'png-512/emblems-emblem-readonly.png',
    'png-512/emblems-emblem-symbolic-link.png',
    'png-512/emblems-emblem-system.png',
    'png-512/emblems-emblem-unreadable.png',
    'png-512/emotes-face-angel.png',
    'png-512/emotes-face-crying.png',
    'png-512/emotes-face-devilish.png',
    'png-512/emotes-face-glasses.png',
    'png-512/emotes-face-grin.png',
    'png-512/emotes-face-kiss.png',
    'png-512/emotes-face-monkey.png',
    'png-512/emotes-face-plain.png',
    'png-512/emotes-face-sad.png',
    'png-512/emotes-face-smile-big.png',
    'png-512/emotes-face-smile.png',
    'png-512/emotes-face-surprise.png',
    'png-512/emotes-face-wink.png',
    'png-512/mimetypes-application-certificate.png',
    'png-512/mimetypes-application-x-executable.png',
    'png-512/mimetypes-audio-x-generic.png',
    'png-512/mimetypes-font-x-generic.png',
    'png-512/mimetypes-image-x-generic.png',
    'png-512/mimetypes-package-x-generic.png',
    'png-512/mimetypes-text-html.png',
    'png-512/mimetypes-text-x-generic.png',
    'png-512/mimetypes-text-x-generic-template.png',
    'png-512/mimetypes-text-x-script.png',
    'png-512/mimetypes-video-x-generic.png',
    'png-512/mimetypes-x-office-address-book.png',
    'png-512/mimetypes-x-office-calendar.png',
    'png-512/mimetypes-x-office-document.png',
    'png-512/mimetypes-x-office-document-template.png',
    'png-512/mimetypes-x-office-drawing.png',
    'png-512/mimetypes-x-office-drawing-template.png',
    'png-512/mimetypes-x-office-presentation.png',
    'png-512/mimetypes-x-office-presentation-template.png',
    'png-512/mimetypes-x-office-spreadsheet.png',
    'png-512/mimetypes-x-office-spreadsheet-template.png',
    'png-512/places-folder.png',
    'png-512/places-folder-remote.png',
    'png-512/places-folder-saved-search.png',
    'png-512/places-network-server.png',
    'png-512/places-network-workgroup.png',
    'png-512/places-start-here.png',
    'png-512/places-user-desktop.png',
    'png-512/places-user-home.png',
    'png-512/places-user-trash.png',
    'png-512/status-audio-volume-high.png',
    'png-512/status-audio-volume-low.png',
    'png-512/status-audio-volume-medium.png',
    'png-512/status-audio-volume-muted.png',
    'png-512/status-battery-caution.png',
    'png-512/status-dialog-error.png',
    'png-512/status-dialog-information.png',
    'png-512/status-dialog-warning.png',
    'png-512/status-folder-drag-accept.png',
    'png-512/status-folder-open.png',
    'png-512/status-folder-visiting.png',
    'png-512/status-image-loading.png',
    'png-512/status-image-missing.png',
    'png-512/status-mail-attachment.png',
    'png-512/status-network-error.png',
    'png-512/status-network-idle.png',
    'png-512/status-network-offline.png',
    'png-512/status-network-receive.png',
    'png-512/status-network-transmit.png',
    'png-512/status-network-transmit-receive.png',
    'png-512/status-network-wireless-encrypted.png',
    'png-512/status-printer-error.png',
    'png-512/status-software-update-available.png',
    'png-512/status-software-update-urgent.png',
    'png-512/status-user-trash-full.png',
    'png-512/status-weather-clear-night.png',
    'png-512/status-weather-clear.png',
    'png-512/status-weather-few-clouds-night.png',
    'png-512/status-weather-few-clouds.png',
    'png-512/status-weather-overcast.png',
    'png-512/status-weather-severe-alert.png',
    'png-512/status-weather-showers.png',
    'png-512/status-weather-showers-scattered.png',
    'png-512/status-weather-snow.png',
    'png-512/status-weather-storm.png'
)

png_icons = png64_icons + png512_icons

tango64_dep = declare_dependency(sources : png64_icons)
tango512_dep = declare_dependency(sources : png512_icons)
tango_dep = declare_dependency(sources : png_icons)

meson.override_dependency('tango64_icons', png64_icons)
meson.override_dependency('tango512_icons', png512_icons)
meson.override_dependency('tango_icons', png_icons)